Introduce PaymentMethodController in backend